# helmr-core

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  tomb_registry.json  trace.jsonl
agents/: agent_alpha.json  agent_test.json
examples/: demo_agent.py
src/: main.rs
workspace/: policy_test.txt  test.txt
